change span tag class names

--- a/Accordion-Menu.html
+++ b/Accordion-Menu.html
@@ -24,8 +24,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Balderdash</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Balderdash</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div>
                     <p>
@@ -38,8 +38,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Blather</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Blather</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div>
                     <p>
@@ -50,8 +50,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Claptrap</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Claptrap</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div>
                     <p>
@@ -65,8 +65,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Drivel</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Drivel</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div>
                 <p>
@@ -77,8 +77,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Gibberish</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Gibberish</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div class="panel">
                 <p>
@@ -92,8 +92,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Hipster Ipsum</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Hipster Ipsum</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div class="panel">
                 <p>
@@ -103,8 +103,8 @@
             
             <section>
                 <button>
-                    <span class="menu-label">Nonsense</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Nonsense</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div>
                     <p>
@@ -115,8 +115,8 @@
 
             <section>
                 <button>
-                    <span class="menu-label">Poppycock</span>
-                    <span class="plus">+</span>
+                    <span class="btn-label">Poppycock</span>
+                    <span class="plus-sign">+</span>
                 </button>
                 <div>
                     <p>
