--- a/v.1.0-Accordion-Menu.html
+++ b/v.1.0-Accordion-Menu.html
@@ -15,7 +15,7 @@
 
     <div class="container">
 
-        <h1> - v.1.0 - Accordion Menu, Hard-Coded</h1>
+        <h1>v.1.0 - Accordion Menu, Hard-Coded</h1>
         <h2>ul and li children all hard-coded in html</h2>
 
         <ul class="accordion-ul">
