--- a/v.1.5-Accordify-Dynamic.html
+++ b/v.1.5-Accordify-Dynamic.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accordion Menu</title>
-    <link href="css/accordion-menu.css" rel="stylesheet">
+    <link href="css/accordify-styles.css" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="container">
 
-        <h1>v.1.5 - Dynamic Accordion Menu</h1>
+        <h1>v.1.5 - Accordify Dynamic Menu</h1>
         <h2>all li tags made dynamically in js</h2>
 
-        <ul class="accordion-ul"></ul>
+        <ul class="accordify"></ul>
 
     </div>
 
-    <script src="js/accordion-data.js"></script>
-    <script src="js/v.1.5-accordion-dynamic-menu.js"></script>
+    <script src="js/accordify-data.js"></script>
+    <script src="js/v.1.5-accordify-dynamic.js"></script>
 
 </body>
 
