change "accordion-ul" css class to "accordify"

--- a/v.1.0-Accordify-Hard-Coded.html
+++ b/v.1.0-Accordify-Hard-Coded.html
@@ -17,7 +17,7 @@
         <h1>v.1.0: Accordify Menu, Hard-Coded</h1>
         <h2>ul and li children all hard-coded in html</h2>
         <p>Replace the button text and div content with your stuff:</p>
-        <p>See <strong>README.md</strong> for details.</p>
+        <p>See <strong><a href="README.md">README.md</a></strong> for details.</p>
 
         <ul class="accordify">
         
